--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
-background-color: grey
-  font family: helvetica
-color: black
+  padding-top: 50px;
+  padding-right: 50px;
+  padding-bottom: 50px; 
+  padding-left: 50px; 
 }
 
