--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@ body {
   padding-right: 200px;
   padding-bottom: 50px; 
   padding-left: 200px; 
-
+div {
+  width:50px;
+  border:20px solid blue;
+  padding:15px;
+  margin:15px;}
 }
 
